# smth_web

./: main..py
django-starter/: README.md  db.sqlite3  pyproject.toml
django-starter/mysite/: asgi.py  consumers.py  datastream.py  routing.py  settings.py  urls.py
django-starter/static/dashboard/: dashboard.css  dashboard.js
django-starter/templates/: index.html
smth-ui/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.js
smth-ui/src/: App.jsx  README.md
smth-ui/src/components/: HudBackground.jsx  HudGauge.jsx  HudLed.jsx  HudToggle.jsx  README.md
smth-ui/src/pages/: Dashboard.jsx
smth-ui/src/styles/: HudLed.css  HudToggle.css  hud-background.css  index.css  theme.css  typography.css
smth_ui_flutter/: README.md  pubspec.yaml
smth_ui_flutter/android/app/: build.gradle.kts
smth_ui_flutter/android/app/src/main/: AndroidManifest.xml
smth_ui_flutter/android/app/src/main/kotlin/com/example/smth_ui_flutter/: MainActivity.kt
smth_ui_flutter/ios/Runner/: Info.plist
smth_ui_flutter/ios/Runner.xcodeproj/: project.pbxproj
smth_ui_flutter/linux/: CMakeLists.txt
smth_ui_flutter/linux/runner/: my_application.cc
smth_ui_flutter/macos/Runner.xcodeproj/: project.pbxproj
smth_ui_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
smth_ui_flutter/macos/Runner/Configs/: AppInfo.xcconfig
smth_ui_flutter/test/: widget_test.dart
smth_ui_flutter/web/: index.html  manifest.json
smth_ui_flutter/windows/: CMakeLists.txt
smth_ui_flutter/windows/runner/: Runner.rc  main.cpp
