[project]
name = "python-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.6",
    "gunicorn>=23.0.0",
    "mysqlclient==2.2.7",
    "psycopg>=3.2",
    "whitenoise>=6.9.0",
    "websockets>=15.0.1",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "msgpack>=1.1.1rc1",
    "uvicorn>=0.40.0",
    "django-cors-headers>=4.9.0"
]
